courses: smoother collection buttons aligning (fixes #9640) (#9645)

--- a/src/app/shared/forms/planet-tag-input-dialog.scss
+++ b/src/app/shared/forms/planet-tag-input-dialog.scss
@@ -53,3 +53,7 @@
   white-space: nowrap;
   margin-left: 0.25rem;
 }
+
+.add-collection-btn-container {
+  align-self: center;
+}
